profiling-using-exp-runner/backup_FINAL_RESULTS/fibonacci_experiment_1/run_2_repetition_0/energibridge.log
sampling interval: 200, target function: fibonacci_lru_cache, input size: 10
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import recursive.fibonacci as module; X = 10; module.fibonacci_lru_cache(X); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 9.660106842041015 for 0.23363091 sec of execution.
